[gd_scene load_steps=9 format=3 uid="uid://se64obp0xwcj"]

[ext_resource type="Script" path="res://Scripts/TitleButtons.gd" id="1_ru2w6"]
[ext_resource type="Theme" uid="uid://bsha7f3816gdw" path="res://Interface/ButtonTheme.tres" id="2_ypftn"]
[ext_resource type="Texture2D" uid="uid://sgavovttlrou" path="res://Images/titlebg.png" id="2_yulxp"]
[ext_resource type="AudioStream" uid="uid://cf8srry4na6eo" path="res://Sounds/intro.mp3" id="5_d0rh0"]
[ext_resource type="AudioStream" uid="uid://dswl7gusvcc14" path="res://Sounds/menuHover.mp3" id="5_tck5d"]
[ext_resource type="SpriteFrames" uid="uid://b7ryiylrq2bcb" path="res://Player/charTitle.tres" id="6_84ggc"]
[ext_resource type="AudioStream" uid="uid://drsyvciou7p2o" path="res://Sounds/menuPress.mp3" id="6_lr6u6"]

[sub_resource type="GDScript" id="GDScript_h0tu1"]
script/source = "extends Button

func _on_pressed():
	get_tree().quit(0);
"

[node name="Menu" type="Node2D"]
script = ExtResource("1_ru2w6")

[node name="Titlebg" type="Sprite2D" parent="."]
position = Vector2(576.5, 586)
scale = Vector2(2.76429, 2.66)
texture = ExtResource("2_yulxp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(277, 441)
rotation = 9.24063e-05
scale = Vector2(3, 3)
sprite_frames = ExtResource("6_84ggc")
animation = &"Sleep"
autoplay = "Sleep"
frame_progress = 0.016205

[node name="Quit Button" type="Button" parent="."]
offset_left = 875.0
offset_top = 497.0
offset_right = 1127.0
offset_bottom = 577.0
theme = ExtResource("2_ypftn")
text = "Quit"
script = SubResource("GDScript_h0tu1")

[node name="PlayBtn" type="Button" parent="."]
offset_left = 582.0
offset_top = 497.0
offset_right = 834.0
offset_bottom = 577.0
theme = ExtResource("2_ypftn")
text = "Play"

[node name="Continue" type="Button" parent="."]
visible = false
offset_left = 582.0
offset_top = 540.0
offset_right = 834.0
offset_bottom = 620.0
theme = ExtResource("2_ypftn")
text = "Play"

[node name="NewGame" type="Button" parent="."]
offset_left = 582.0
offset_top = 400.0
offset_right = 834.0
offset_bottom = 480.0
theme = ExtResource("2_ypftn")
text = "New"

[node name="Options" type="Button" parent="."]
visible = false
offset_left = 875.0
offset_top = 443.0
offset_right = 1127.0
offset_bottom = 523.0
theme = ExtResource("2_ypftn")
text = "Options"

[node name="AudioHover" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(600, 350)
stream = ExtResource("5_tck5d")

[node name="AudioClick" type="AudioStreamPlayer2D" parent="."]
position = Vector2(600, 350)
stream = ExtResource("6_lr6u6")

[node name="Label" type="Label" parent="."]
offset_left = 161.0
offset_top = 88.0
offset_right = 689.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 100
text = "Borderless"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(600, 350)
stream = ExtResource("5_d0rh0")
autoplay = true

[connection signal="button_down" from="Quit Button" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Quit Button" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="button_down" from="PlayBtn" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="PlayBtn" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="button_down" from="Continue" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Continue" to="." method="_on_btn_mouse_entered"]
[connection signal="button_down" from="NewGame" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="NewGame" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="NewGame" to="." method="_on_play_btn_pressed"]
[connection signal="button_down" from="Options" to="." method="_on_button_down"]
[connection signal="mouse_entered" from="Options" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
